--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="OpenGLHelper.cpp" />
     <ClCompile Include="SDHRManager.cpp" />
     <ClCompile Include="SDHRNetworking.cpp" />
+    <ClCompile Include="SDHRWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
@@ -186,6 +187,7 @@
     <ClInclude Include="OpenGLHelper.h" />
     <ClInclude Include="SDHRManager.h" />
     <ClInclude Include="SDHRNetworking.h" />
+    <ClInclude Include="SDHRWindow.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
