--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -198,14 +198,16 @@
     <None Include="imgui\imgui\misc\debuggers\imgui.natvis" />
     <None Include="packages.config" />
     <None Include="README.md" />
-    <CopyFileToFolders Include="shaders\sdhr_default.frag">
+    <CopyFileToFolders Include="shaders\sdhr_default_330.frag">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <FileType>Document</FileType>
     </CopyFileToFolders>
-    <CopyFileToFolders Include="shaders\sdhr_default.vert">
+    <CopyFileToFolders Include="shaders\sdhr_default_330.vert">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <FileType>Document</FileType>
     </CopyFileToFolders>
+    <None Include="shaders\sdhr_default_310es.frag" />
+    <None Include="shaders\sdhr_default_310es.vert" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Texture_Default.png">
