--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -210,6 +210,8 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <FileType>Document</FileType>
     </CopyFileToFolders>
+    <None Include="shaders\a2video_text_310es.frag" />
+    <None Include="shaders\a2video_text_310es.vert" />
     <None Include="shaders\a2video_text_330.frag" />
     <None Include="shaders\a2video_text_330.vert" />
     <None Include="shaders\sdhr_default_310es.frag" />
