--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -199,6 +199,8 @@
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Debug\shaders\a2video_hgr_330.frag" />
+    <None Include="Debug\shaders\a2video_hgr_330.vert" />
     <None Include="imgui\imgui\misc\debuggers\imgui.natstepfilter" />
     <None Include="imgui\imgui\misc\debuggers\imgui.natvis" />
     <None Include="packages.config" />
