--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -200,8 +200,6 @@
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Debug\shaders\a2video_hgr_330.frag" />
-    <None Include="Debug\shaders\a2video_hgr_330.vert" />
     <None Include="imgui\imgui\misc\debuggers\imgui.natstepfilter" />
     <None Include="imgui\imgui\misc\debuggers\imgui.natvis" />
     <None Include="packages.config" />
@@ -238,6 +236,8 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <FileType>Document</FileType>
     </Media>
+    <None Include="shaders\a2video_hgr_330.frag" />
+    <None Include="shaders\a2video_hgr_330.vert" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="shaders\**">
