--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="A2Window.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="HGRAddr2XY.h">
+      <Filter>headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
@@ -151,6 +154,12 @@
       <Filter>imgui</Filter>
     </None>
     <None Include="packages.config" />
+    <None Include="shaders\a2video_hgr_330.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shaders\a2video_hgr_330.frag">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Media Include="shaders\sdhr_default_330.vert">
