--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -253,7 +253,7 @@
     <Image Include="textures\Apple2eFont7x8 - Alternate.png" />
     <Image Include="textures\Apple2eFont7x8 - Regular.png" />
     <Image Include="textures\Texture_Default.png" />
-    <Image Include="textures\Texture_HGR.png" />
+    <Image Include="textures\Texture_Scanlines.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
