--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -160,6 +160,18 @@
     <None Include="shaders\a2video_dtext_330.frag">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\sdhr_depixelize_310es.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shaders\sdhr_depixelize_330.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shaders\sdhr_depixelize_330.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shaders\sdhr_depixelize_310es.vert">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Media Include="shaders\sdhr_default_330.vert">
