--- a/SuperDuperDisplay.vcxproj.filters
+++ b/SuperDuperDisplay.vcxproj.filters
@@ -76,6 +76,12 @@
     <ClCompile Include="ImGuiFileDialog.cpp">
       <Filter>sources</Filter>
     </ClCompile>
+    <ClCompile Include="PostProcessor.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
+    <ClCompile Include="shader.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -153,6 +159,7 @@
     <ClInclude Include="ImGuiFileDialogConfig.h">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="PostProcessor.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
@@ -163,13 +170,7 @@
       <Filter>imgui</Filter>
     </None>
     <None Include="packages.config" />
-    <None Include="shaders\a2video_dtext_310es.frag">
-      <Filter>shaders</Filter>
-    </None>
     <None Include="shaders\a2video_dtext_330.frag">
-      <Filter>shaders</Filter>
-    </None>
-    <None Include="shaders\sdhr_depixelize_310es.frag">
       <Filter>shaders</Filter>
     </None>
     <None Include="shaders\sdhr_depixelize_330.frag">
@@ -178,7 +179,9 @@
     <None Include="shaders\sdhr_depixelize_330.vert">
       <Filter>shaders</Filter>
     </None>
-    <None Include="shaders\sdhr_depixelize_310es.vert">
+    <None Include="Makefile" />
+    <None Include="shaders\a2video_text.glsl" />
+    <None Include="shaders\a2video_postprocess.glsl">
       <Filter>shaders</Filter>
     </None>
   </ItemGroup>
@@ -186,22 +189,10 @@
     <Media Include="shaders\sdhr_default_330.vert">
       <Filter>shaders</Filter>
     </Media>
-    <Media Include="shaders\sdhr_default_310es.frag">
-      <Filter>shaders</Filter>
-    </Media>
-    <Media Include="shaders\sdhr_default_310es.vert">
-      <Filter>shaders</Filter>
-    </Media>
     <Media Include="shaders\sdhr_default_330.frag">
       <Filter>shaders</Filter>
     </Media>
     <Media Include="shaders\a2video_text_330.vert">
-      <Filter>shaders</Filter>
-    </Media>
-    <Media Include="shaders\a2video_text_310es.vert">
-      <Filter>shaders</Filter>
-    </Media>
-    <Media Include="shaders\a2video_text_310es.frag">
       <Filter>shaders</Filter>
     </Media>
     <Media Include="shaders\a2video_text_330.frag">
