--- a/SuperDuperDisplay.vcxproj
+++ b/SuperDuperDisplay.vcxproj
@@ -159,6 +159,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="A2Window.cpp" />
+    <ClCompile Include="CycleCounter.cpp" />
     <ClCompile Include="extras\ImGuiFileDialog.cpp" />
     <ClCompile Include="extras\MemoryLoader.cpp" />
     <ClCompile Include="glad\glad.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="camera.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="ConcurrentQueue.h" />
+    <ClInclude Include="CycleCounter.h" />
     <ClInclude Include="extras\MemoryLoader.h" />
     <ClInclude Include="glad\glad.h" />
     <ClInclude Include="glad\khrplatform.h" />
